Product History Price; endpoint /product/history/price
Adds the Price history for the products.

IMPORTANT: Please, delete cache folder of Nette (`/temp/cache`)

This commit also includes:
- Manager classes moved to namespace App\Models\ApiManager;
- Manager class files is now reorganized by their entrypoint paths (partly)
- All exceptions are now in the file ApiException.php
- Router factory: added endpoint /product/history/price
- Update of openapi.yml respectively
