# app/Router/RouterFactory.php
@@ -16,6 +16,7 @@ final class RouterFactory
         $router = new RouteList;
         $router->addRoute('v1/product', 'Product:default');
         $router->addRoute('v1/product/history', 'Product:history');
+        $router->addRoute('v1/product/history/price', 'Product:historyPrice');
         $router->addRoute('v1/products', 'ProductList:default');
         $router->addRoute('v1/openapi.yml', 'Default:openapiYaml');
         $router->addRoute('v1/openapi.json', 'Default:openapiJson');
