# openapi/openapi.yml
@@ -16,6 +16,7 @@ tags:
   - name: Product
   - name: Products
   - name: Product History
+  - name: Product History Price
 
 paths:
   /product:
@@ -264,7 +265,7 @@ paths:
           description: Number of records to skip
       responses:
         '200':
-          description: Product history
+          description: Product history list
           content:
             application/json:
               schema:
@@ -276,6 +277,56 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/ProductHistory'
+        '400':
+          $ref: '#/components/responses/Error'
+        '404':
+          $ref: '#/components/responses/Error'
+
+  /product/history/price:
+    get:
+      summary: Get product price history by product ID
+      description: Returns the price history of product.
+      tags:
+        - Product History Price
+      operationId: getProductHistoryPrice
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Product ID
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 50
+            minimum: 1
+            maximum: 100
+          required: false
+          description: Max number of history records to return
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+            minimum: 0
+          required: false
+          description: Number of records to skip
+      responses:
+        '200':
+          description: Product history price list
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/ProductHistoryPrice'
         '400':
           $ref: '#/components/responses/Error'
         '404':
@@ -371,6 +422,30 @@ components:
             - "null"
           # nullable: true # Allows null values (obsolette)
           format: date-time
+    ProductHistoryPrice:
+      type: object
+      properties:
+        guid:
+          type: integer
+        price:
+          type: number
+          format: float
+          minimum: 0
+          default: 0
+        price_old:
+          type: number
+          format: float
+          minimum: 0
+          default: 0
+        price_changed:
+          type: boolean
+        changed_at:
+          type:
+            - string
+            - "null"
+          # nullable: true # Allows null values (obsolette)
+          format: date-time
+
 
   responses:
     Error:
